# kyamites-brown

./: .gitignore  CMakeLists.txt  CSSE4011_poster.pptx  CSSE4011_poster_final.pptx  Kconfig.kyamites-brown  README.md  west.yml
app/: CMakeLists.txt  meas_packet.proto  particle_argon.overlay  prj.conf  rtt
app/base/: Kconfig  flashnrf
app/base/src/: main.c
app/client/: Kconfig  prj.conf
app/myoslib/: hal_mqtt.c  hal_mqtt.h  hal_wifi.c  hal_wifi.h  meas_packet.pb.h
app/relay/: CMakeLists.txt  Kconfig
app/server/: CMakeLists.txt  Kconfig  particle_argon.overlay  prj.conf
app/server/drivers/: Kconfig
app/server/drivers/crickit/: CMakeLists.txt  Kconfig  hal_crickit.c  hal_crickit.h
app/server/dts/bindings/: adafruit,crickit.yaml
app/server/inc/: methane_sensor_srv_handler.h
app/server/src/: main.c  methane_sensor_srv_handler.c
app/src/: main.c
drivers/: CMakeLists.txt
drivers/crickit/: CMakeLists.txt  Kconfig  crickit.c  hal_crickit.c  hal_crickit.h
drivers/crickit/collect/: adafruit,crickit.yaml  adafruit_crickit_feather.dtsi
dts/bindings/: adafruit,crickit.yaml  power-timer.yaml
mqtt/: config.h  main.c
myoslib/: CMakeLists.txt
myoslib/inc/: hal_mqtt.h  hal_wifi.h
myoslib/src/: hal_mqtt.c  hal_wifi.c  meas_packet.pb.c
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/: CMakeLists.txt  Kconfig
subsys/bluetooth/mesh/: CMakeLists.txt  Kconfig  model_utils.c  sensor.c  sensor_cli.c  sensor_srv.c  sensor_types.c
subsys/bluetooth/mesh/boards/: CMakeLists.txt  Kconfig  argon_prov.c
zephyr/: module.yml
(+3 files in other folders)
